--- a/desktop_styles.css
+++ b/desktop_styles.css
@@ -1066,7 +1066,7 @@ padding-bottom: 2rem;
     position: relative;
     display: block;
     left: -8.5rem;
-    font-family: 'xanh_monoregular', monospace;
+    font-family: 'xanh_monoregular';
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
