--- a/desktop_styles.css
+++ b/desktop_styles.css
@@ -1045,12 +1045,12 @@ padding-bottom: 5px;
 
   .book-title p{
     font-family: 'jetbrains_monoitalic', monospace;
+    font-style: normal;
+    font-weight: normal;
     position: relative;
     display: block;
-    font-style: normal;
     text-align: left;
     font-size: 15px;
-    font-weight: normal;
     padding-top: 0.5rem;
     padding-right: 2rem;
     line-height: 1.3rem;
@@ -1062,6 +1062,8 @@ padding-bottom: 5px;
     text-transform: uppercase;
     text-align: left;
     font-size: 10px;
+font-family: 'jetbrains_monoitalic', monospace;
+font-style: normal;
     font-weight: normal;
     top: -1rem;
     padding-right: 2rem;
