--- a/desktop_styles.css
+++ b/desktop_styles.css
@@ -1043,7 +1043,7 @@ padding-bottom: 5px;
     padding: 7rem;
   }
 
-  .book-title p{
+  .book-title{
     font-family: 'jetbrains_monoitalic', monospace;
     font-style: normal;
     font-weight: normal;
