--- a/index_desktop_styles.css
+++ b/index_desktop_styles.css
@@ -230,8 +230,8 @@ white-space: nowrap;
 #blob-container{
 margin: auto;
 position: relative;
-width: 100vw;
-height: 100vh;
+min-width: 100vw;
+min-height: 100vh;
 }
 
 .about-mobile{
