--- a/index_desktop_styles.css
+++ b/index_desktop_styles.css
@@ -1,3 +1,202 @@
+@font-face {
+    font-family: 'creato_displayregular';
+    src: url('fonts/creatodisplay-regular-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'creato_displayblack_italic';
+    src: url('fonts/creatodisplay-blackitalic-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-blackitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'creato_displaybold_italic';
+    src: url('fonts/creatodisplay-bolditalic-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-bolditalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'creato_displayXBdIt';
+    src: url('fonts/creatodisplay-extrabolditalic-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-extrabolditalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'creato_displaylight_italic';
+    src: url('fonts/creatodisplay-lightitalic-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-lightitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'creato_displaymedium_italic';
+    src: url('fonts/creatodisplay-mediumitalic-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-mediumitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'creato_displayitalic';
+    src: url('fonts/creatodisplay-regularitalic-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-regularitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'creato_displaythin_italic';
+    src: url('fonts/creatodisplay-thinitalic-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-thinitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'creato_displayblack';
+    src: url('fonts/creatodisplay-black-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-black-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'creato_displaybold';
+    src: url('fonts/creatodisplay-bold-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'creato_displayextrabold';
+    src: url('fonts/creatodisplay-extrabold-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-extrabold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'creato_displaylight';
+    src: url('fonts/creatodisplay-light-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'creato_displaymedium';
+    src: url('fonts/creatodisplay-medium-webfont.woff2') format('woff2'),
+         url('fonts/creatodisplay-medium-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'goozetteregular';
+    src: url('fonts/goozette-webfont.woff2') format('woff2'),
+         url('fonts/goozette-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'jetbrains_monoitalic';
+    src: url('fonts/jetbrainsmono-italicwght-webfont.woff2') format('woff2'),
+         url('fonts/jetbrainsmono-italicwght-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'jetbrains_monoregular';
+    src: url('fonts/jetbrainsmonowght-webfont.woff2') format('woff2'),
+         url('fonts/jetbrainsmonowght-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+@font-face {
+    font-family: 'xanh_monoitalic';
+    src: url('fonts/xanhmono-italic-webfont.woff2') format('woff2'),
+         url('fonts/xanhmono-italic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'xanh_monoregular';
+    src: url('fonts/xanhmono-regular-webfont.woff2') format('woff2'),
+         url('fonts/xanhmono-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 *{     margin: 0;
 }
 
@@ -246,6 +445,7 @@ right: 2rem;
 border: #000000 1px solid;
 background-color: #8bee84;
 border-radius: 5rem;
+z-index: 1;
 }
 
 .about-mobile p{
@@ -298,35 +498,41 @@ width: 55%;
 float: right;
 }
 
-
+.icon-1{
+    width: 30rem;
+    height: 30rem;
+    position: absolute;
+top: 50vh;
+left: 10vw;
+}
 
 .title-1{
 position: absolute;
 margin: auto;
-left: 10vw;
-top: 50vh;
+height: 5rem;
 z-index: 1;
 }
 
 .desc-1, .desc-2, .desc-3, .desc-4, .desc-5{
 display: none;
-width: 15rem;
+width: 20rem;
+height: 10rem;
+position: absolute;
+margin: auto;
 }
 
 .title-1:hover + .desc-1{
 display: block;
 box-sizing: border-box;
-font-family: 'JetBrains Mono', monospace;
+font-family: 'jetbrains_monoregular', monospace;
 font-style: normal;
-font-weight: 400;
+font-weight: normal;
 text-align: left;
 font-size: 14px;
 position: absolute;
-margin: auto;
 box-sizing: border-box;
-left: 17.7vw;
-top: 58vh;
-z-index: 1;
+padding-left: 7rem;
+padding-top: 4rem;
 }
 
 #seed{
@@ -335,10 +541,19 @@ position: relative;
 float: left;
 }
 
-.title-2{
-position: absolute;
+
+
+
+.icon-2{
+    width: 30rem;
+    height: 30rem;
+    position: absolute;
 top: 20vh;
 left: 40vw;
+}
+
+.title-2{
+position: absolute;
 z-index: 1;
 }
 
@@ -350,17 +565,16 @@ padding-left: 9rem;
 .title-2:hover + .desc-2{
 display: block;
 box-sizing: border-box;
-font-family: 'JetBrains Mono', monospace;
+font-family: 'jetbrains_monoregular', monospace;
 font-style: normal;
-font-weight: 400;
+font-weight: normal;
 text-align: left;
 font-size: 14px;
 position: absolute;
+padding-left: 7rem;
+padding-top: 5.5rem;
 margin: auto;
 box-sizing: border-box;
-top: 31vh;
-left: 47.7vw;
-z-index: 1;
 }
 
 #sunflower{
@@ -369,10 +583,16 @@ float: left;
 z-index: 1;
 }
 
+.icon-3{
+    width: 30rem;
+    height: 30rem;
+    position: absolute;
+top: 62vh;
+left: 35vw;
+}
+
 .title-3{
 position: absolute;
-top: 32rem;
-left: 33rem;
 z-index: 1}
 
 .title-3 sub{
@@ -391,9 +611,8 @@ font-size: 14px;
 position: absolute;
 margin: auto;
 box-sizing: border-box;
-left: 40.8rem;
-top: 37rem;
-z-index: 1;
+padding-left: 7.6rem;
+padding-top: 5.5rem;
 }
 
 #conversations{
@@ -401,10 +620,17 @@ position: relative;
 float: left;
 z-index: 1;
 }
+
+.icon-4{
+    width: 30rem;
+    height: 30rem;
+    position: absolute;
+top: 30vh;
+left: 65vw;
+}
+
 .title-4{
     position: absolute;
-    top: 30vh;
-    left: 65vw;
 z-index: 1;
 }
 
@@ -423,9 +649,8 @@ font-size: 14px;
 position: absolute;
 margin: auto;
 box-sizing: border-box;
-left: 73vw;
-top: 38vh;
-z-index: 1;
+padding-left: 7rem;
+padding-top: 4rem;
 }
 
 #gloves{
@@ -434,16 +659,20 @@ float: left;
 z-index: 1;
 }
 
-    .title-5{
+.icon-5{
+    width: 30rem;
+    height: 30rem;
     position: absolute;
     top: 57vh;
     left: 70vw;
+}
+    .title-5{
+    position: absolute;
     z-index: 1;
-    width: 500px
 }
 
 .title-5 sub{
-    left: -6rem;
+left: -0.5rem;
     padding-top: 1rem;
 }
 
@@ -458,9 +687,8 @@ z-index: 1;
     position: absolute;
     margin: auto;
     box-sizing: border-box;
-    left: 79vw;
-    top: 65vh;
-    z-index: 1;
+    padding-left: 7rem;
+    padding-top: 5rem;
 }
 
 #watering-can{
