--- a/desktop_styles.css
+++ b/desktop_styles.css
@@ -293,7 +293,6 @@ p{
     font-style: normal;
     text-align: left;
     padding-bottom: 5px;
-    font-weight: 400;
     font-size: 20px;
     line-height: 2rem;
 }
@@ -424,7 +423,7 @@ margin-top: 0.7rem;
      font-family: 'jetbrains_monoregular', monospace;
     font-style: normal;
     text-align: left;
-    font-size: 14px; 
+    font-size: 12px; 
     padding-top: 15rem;
     padding-left: 1.2rem;
 }
@@ -533,6 +532,8 @@ padding-top: 2rem;
 padding-left: 8rem;
     padding-bottom: 2rem;
     font-family: 'creato_displayregular', sans-serif;
+    font-weight: normal;
+    font-style: normal;
     font-size: 20px;
     line-height: 1.8rem;
     width: 50vw;
@@ -1115,16 +1116,17 @@ width: fit-content;
 
 /*grants*/
 .accordion-box{
-    margin-top: 10rem;
+    margin-top: 3rem;
 }
 .accordion {
     cursor: pointer;
-    padding: 1rem;
+    padding: 1.5rem;
     width: 80vw;
     margin-left: 8rem;
     padding-left: 2rem;
     background-color: #FFEAF9;
     border: 1px solid #000000;
+    border-radius: 2rem;
     text-align: left;
     outline: none;
     transition: 0.4s;
@@ -1148,27 +1150,42 @@ width: fit-content;
 max-height: 0;
     display: none;
     transition: max-height 0.2s ease-out;
+    width: 80vw;
+    margin-left: 8rem;
+    position: relative;
   }
 
   .panel-text{
     padding-top: 2rem;
-    padding-left: 10rem;
-
+    padding-left: 2rem;
+position: relative;
   }
 
   .panel-text h2{
-    font-size: 30px;
+    font-size: 32px;
+    font-family: 'creato_displaymedium', sans-serif;
     }
 
   .panel-text p{
 font-family: 'Creato Display', sans-serif;  
 font-size: 20px;
+padding-top: 0.5rem;
 }
   .accordion:active, .panel{
     display: block;
 overflow: hidden;
   }
 
+  .line-4{
+    position: relative;
+   margin-top: 4rem;
+    left: 2rem;
+    right: 2rem;
+    width: 76vw;
+    height: 2px;
+    border-radius: 1rem;
+    background-color: #000000
+}
 
   
 .image{
