--- a/desktop_styles.css
+++ b/desktop_styles.css
@@ -907,13 +907,13 @@ font-family: 'jetbrains_monoregular', monospace;
 
 .img{
     display: block;
-    position: absolute;
+    position: relative;
     box-sizing: border-box;
-    width: 20rem;
-    height: 40rem;
+    width: 15vw;
+    height: 20vh;
     float: right;
-   top: -2rem;
-    right: 7rem;
+    display: block;
+    box-sizing: border-box;
 }
 
 .img sub{
@@ -922,24 +922,34 @@ font-family: 'jetbrains_monoregular', monospace;
     margin: auto;
     font-size: 10px;
     text-align: left;
-    padding-left: 7rem;
-top: -11rem;
+    left: -5rem;
+top: -39rem;
 }
+
+#tash-image{
+    scale: 70%;
+    padding-top: 2rem;
+    top: -30rem;
+    left: -25rem;
+    position: relative;
+}
+
 
 #manifesto{
     position: relative;
     margin: auto;
-    padding-left: 0.5rem;
-    scale: 53%;
+    padding-top: 8rem;
+    top: -30rem;
+    left: -10rem;
+    scale: 65%;
 }
 
 .footer-line{
         background-color: #000000;
-        margin: auto;
-        width: 76vw;
+       margin-left: 11rem;
+        width: 70vw;
         height: 1px;
         position: relative;
-    
 }
 .contact{
     padding-top: 2rem;
@@ -959,19 +969,18 @@ top: -11rem;
     margin-left: 11rem;
     padding-left: 1rem;
     width: 70vw;
-    height: 80vh;
-    position: absolute;
+    height: 15rem;
     margin-bottom: 8rem;
-
+    position: relative;
 }
     
-.ecosystems h1{
+#ecosystems h1{
     padding: 1rem;
     text-align: left;
-    font-size: 40px;
+    font-size: 30px;
 }
 
-#blob-container-blue{
+/*#blob-container-blue{
     display: block;
     width: 600px;
     height: 700px;
@@ -981,18 +990,21 @@ top: -11rem;
     margin-bottom: 17rem;
     margin-left: 25rem;
     overflow: clip;
-}
+}*/
 
-.section-1, .section-2, .section-3{
+.section-2, .section-3{
   position: relative;
   margin-left: 0; 
 padding-bottom: 5px;
+padding-top: 3rem;
 }
 
-.section-1 sub, .section-2 sub, .section-3 sub{
+ .section-2 sub, .section-3 sub{
   font-size: 14px;
   margin-left: 10px; 
   float: left; 
+  z-index: 1;
+
   }
 
   
@@ -1165,7 +1177,7 @@ position: relative;
     }
 
   .panel-text p{
-font-family: 'Creato Display', sans-serif;  
+font-family: 'creato_displayregular', sans-serif;  
 font-size: 20px;
 padding-top: 0.5rem;
 }
@@ -1289,20 +1301,29 @@ padding-top: 1rem;
 .experience-text-1{
     width: 60vw;
     position: relative;
+    margin: 0;
     padding-top: 5rem;
-    padding-left: 10rem;
+    padding-left: 11rem;
 
 }
 .location{
-    padding-top: 1rem;
-    padding-bottom: 5rem;
+    top: 1rem;
+    width: 15rem;
     position: relative;
-    left: -12rem;
+    left: 7rem;
+    display: block;
+    font-family: 'jetbrains_monoregular', monospace;
+        font-style: normal;
+        text-align: left;
+        font-size: 12px; 
+        padding-bottom: 5rem;
 }
 .location sub{
   font-size: 10px;
   width: 50%;
+  left: 0;
 text-align: left;
+position: relative;
 }
 
 #zinesjpg{
@@ -1310,8 +1331,8 @@ text-align: left;
     padding-top: 1rem;
     padding-left: 10rem;
     margin: auto;
-    width: 55rem;
-    height: 40rem;
+    width: 70rem;
+    height: 50rem;
 }
 
 #EX-1{
