--- a/desktop_styles.css
+++ b/desktop_styles.css
@@ -239,7 +239,7 @@ margin: auto;
     float: left;
     padding-top: 4rem;
     padding-left: 8rem;
-    font-family: 'Goozette';
+    font-family: 'goozetteregular';
     font-style: normal;
     font-weight: 400;
     font-size: 90px;
@@ -258,7 +258,7 @@ margin: auto;
     #header-text-gardens {
     position: relative;
     padding-left: 18px;
-    font-family: 'Goozette';
+    font-family: 'goozetteregular';
     font-style: normal;
     font-weight: 400;
     font-size: 70px;
@@ -274,7 +274,7 @@ padding-top: 2.5rem;
 padding-left: 1rem;
 position: relative;
 float: left;
-    font-family: 'Goozette';
+    font-family: 'goozetteregular';
     font-style: normal;
     font-weight: 400;
     font-size: 50px;
