--- a/index_desktop_styles.css
+++ b/index_desktop_styles.css
@@ -238,7 +238,7 @@ border-color: rgb(27, 160, 27);
 border: none;
 outline: none;
 background-color: #ffffff;
-font-family: 'Xanh Mono', monospace;
+font-family: 'xanh_monoregular', monospace;
 font-size: 15px;
 line-height: 19px;
 position: relative;    
@@ -253,7 +253,7 @@ margin-right: 1rem;
 border: none;
 outline: none;
 background-color: #ffffff;
-font-family: 'Xanh Mono', monospace;
+font-family: 'xanh_monoregular', monospace;
 font-size: 15px;
 line-height: 19px;
 position: relative;    
@@ -270,7 +270,7 @@ margin-left: 30px;
 position: relative;
 float: left;
 padding-top: 4rem;
-font-family: 'Goozette';
+font-family: 'goozetteregular';
 font-style: normal;
 font-weight: 400;
 font-size: 110px;
@@ -286,7 +286,7 @@ padding-top: 2.5rem;
 padding-left: 1rem;
 position: relative;
 float: left;
-font-family: 'Goozette';
+font-family: 'goozetteregular';
 font-style: normal;
 font-weight: 400;
 font-size: 50px;
@@ -294,14 +294,14 @@ width: 70%
 }
 
 h2 {
-font-family: 'Creato Display', sans-serif;
+font-family: 'creato_displayregular', sans-serif;
 font-style: normal;
 font-weight: 500;
 font-size: 40px;
 }
 
 p{
-font-family: 'Creato Display', sans-serif;
+font-family: 'creato_displayregular', sans-serif;
 font-style: normal;
 text-align: left;
 padding-bottom: 5px;
@@ -311,7 +311,7 @@ line-height: 2rem;
 }
 
 sub{
-font-family: 'JetBrains Mono', monospace;
+font-family: 'jetbrains_monoregular', monospace;
 font-style: normal;
 font-weight: 500;
 text-align: left;
@@ -320,7 +320,7 @@ font-size: 12px;
 
 
 li{
-font-family: 'Creato Display', sans-serif;
+font-family: 'creato_displayregular', sans-serif;
 font-style: normal;
 text-align: left;
 padding-bottom: 5px;
@@ -329,9 +329,8 @@ font-size: 20px;
 }
 
 b{
-font-family: 'Creato Display', sans-serif;
+font-family: 'creato_displaybold', sans-serif;
 font-style: normal;
-font-weight: 700;
 text-align: left;
 padding-bottom: 5px;
 font-size: 20px;
@@ -349,7 +348,7 @@ padding-top: 4.5rem;
 #header-text-gardens {
 position: relative;
 padding-left: 18px;
-font-family: 'Goozette';
+font-family: 'goozetteregular';
 font-style: normal;
 font-weight: 400;
 font-size: 70px;
@@ -373,7 +372,7 @@ position: absolute;
 width: 100%;
 height: 100%;
 margin: auto;
-font-family: 'JetBrains Mono', monospace;
+font-family: 'jetbrains_monoregular', monospace;
  font-style: normal;
   text-align: left;
   font-weight: 400;
@@ -406,7 +405,7 @@ width: 100vw;
 }
 
 .marquee-bottom p{
-font-family: 'Goozette';
+font-family: 'goozetteregular';
 font-style: normal;
 font-weight: 400;  
 color: #000000;
@@ -453,7 +452,7 @@ margin: auto;
 padding-top: 1rem;
 position: relative;
 text-align: center;
-font-family: 'Goozette', sans-serif;
+font-family: 'goozetteregular', sans-serif;
 font-size: 1.3rem;
 line-height: 1.7rem;
 color: #000000;
@@ -478,14 +477,14 @@ margin: auto;
 padding-top: 1rem;
 position: relative;
 text-align: center;
-font-family: 'Goozette', sans-serif;
+font-family: 'goozetteregular', sans-serif;
 font-size: 1.3rem;
 line-height: 1.7rem;
 color: #000000;
 }
 
 .title-1 sub, .title-2 sub, .title-3 sub, .title-4 sub, .title-5 sub{
-font-family: 'JetBrains Mono', monospace;
+font-family: 'jetbrains_monoregular', monospace;
 font-style: normal;
 font-weight: 500;
 text-align: left;
@@ -603,7 +602,7 @@ padding-left: 8rem;
 .title-3:hover + .desc-3{
 display: block;
 box-sizing: border-box;
-font-family: 'JetBrains Mono', monospace;
+font-family: 'jetbrains_monoregular', monospace;
 font-style: normal;
 font-weight: 400;
 text-align: left;
@@ -641,7 +640,7 @@ padding-left: 3rem;
 .title-4:hover + .desc-4{
 display: block;
 box-sizing: border-box;
-font-family: 'JetBrains Mono', monospace;
+font-family: 'jetbrains_monoregular', monospace;
 font-style: normal;
 font-weight: 400;
 text-align: left;
@@ -679,7 +678,7 @@ left: -0.5rem;
 .title-5:hover + .desc-5{
     display: block;
     box-sizing: border-box;
-    font-family: 'JetBrains Mono', monospace;
+    font-family: 'jetbrains_monoregular', monospace;
     font-style: normal;
     font-weight: 400;
     text-align: left;
