--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -536,6 +536,7 @@ height: 10rem
     height: 7rem;
     margin: auto;
     bottom: 5px;
+    padding-bottom: 1rem;
     right: 0;
     border: #000000 1px solid;
     background-color: #8bee84;
