--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -534,7 +534,7 @@ height: 10rem
     display: block;
     width: 40vw;
     height: 7rem;
-    margin: auto;
+    margin-top: 1rem;
     padding-bottom: 1rem;
     right: 0;
     border: #000000 1px solid;
