--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -548,6 +548,7 @@ height: 10rem
     margin: auto;
     position: relative;
     text-align: center;
+    padding: 1.5rem;
     font-family: 'goozetteregular', sans-serif;
     font-size: 18px;
     line-height: 1.5rem;
