--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -536,7 +536,6 @@ height: 10rem
     height: 7rem;
     position: relative;
    top: 1rem;
-    left:1rem;
     bottom: 1rem;
     margin: auto;
     right: 0;
@@ -549,6 +548,7 @@ height: 10rem
 .about-mobile p{
     margin: auto;    
     width: 25vw;
+    top:2rem;
     position: relative;
     text-align: center;
     font-family: 'goozetteregular', sans-serif;
