--- a/desktop_styles.css
+++ b/desktop_styles.css
@@ -241,7 +241,7 @@ margin: auto;
     padding-left: 8rem;
     font-family: 'goozetteregular';
     font-style: normal;
-    font-weight: 400;
+    font-weight: normal;
     font-size: 90px;
     line-height: 101%;
     color: rgb(7, 7, 7);
@@ -260,7 +260,7 @@ margin: auto;
     padding-left: 18px;
     font-family: 'goozetteregular';
     font-style: normal;
-    font-weight: 400;
+    font-weight: normal;
     font-size: 70px;
     line-height: 101%;
     letter-spacing: -0.045em;
